Stopgap mobile nav

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,14 @@ a:hover {text-decoration:none; color: #F6714F; border-bottom: 1px dotted;}
 .page-header .active-item {text-decoration:none; color:#222;}
 .social-icon {color:#707070; width:20px; height: 20px;margin-bottom: 3px;}
 
+/*<!-- Navigation menu responsive tweaks -->*/
+@media (max-width: 769px) {
+  h1 {margin-top:40px;}
+  div.page-header {padding-top:30px; padding-bottom:30px; }
+  div.col-auto.p-3 {padding: 0.5rem!important;}
+  }  
+
+
 /** Page intro **/
 .page-intro {margin-top: 0px;margin-bottom:50px;padding-top:50px; padding-bottom: 15px;}
 
